--- a/index/netlify.toml
+++ b/index/netlify.toml
@@ -1,6 +1,9 @@
 [build]
-  base = "index"
-  functions = "index/netlify/functions"
+  functions = "netlify/functions"
+  publish = "."
+
+[functions]
+  directory = "netlify/functions"
 
 [functions."reminder_cron"]
   schedule = "*/5 * * * *"
